添加正则第二章的内容

--- a/正则/常见题目.md
+++ b/正则/常见题目.md
@@ -88,20 +88,63 @@ str.match(reg); //['id="container"']
 
 IP地址的正则为 ：/^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|2[5][0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|2[5][0-5])$/
 
-##### 3. 题目：将1234567 变成 1,234,567，即千分位标注
+##### 3. 题目：千分位标注
+
+步骤一. 弄出最后一个逗号
 
 ```javascript
-var str = '12345678';
-var arr = str.split('') //Array.prototype.slice.call(str,'');
-var resultArr = [];
-for(var i=arr.length-1;i>=0;i--){
-    if(((arr.length-1-i)%3 == 0) &&(arr.length-1-i>0)){
-        resultArr.unshift(',');
-    }
-    resultArr.unshift(arr[i]);
-}
-console.log(resultArr.join(''));
+var str = '123456789'.replace(/(?=\d{3}$)/,',');
+console.log(str)  //'123456,789'
 ```
+
+步骤二. 弄出所有逗号
+
+```javascript
+//var str = '123456789'.replace(/(?=\d{3})+$/g,',')
+//?=所在的括号整个表示的是一个位置
+//从最后开始 每三个数字一组/(\d{3})+$/ 然后我们所匹配的位置在每组数字的最前面
+var str = '123456789'.replace(/(?=(\d{3})+$)/g,',')
+console.log(str)  //',123,456,789'
+```
+
+步骤三. 逗号不能在最前面
+
+```javascript
+var str = '123456789'.replace(/(?!^)(?=(\d{3})+$)/g,',')
+console.log(str)  //'123,456,789'
+
+```
+
+
+#### 4. 验证密码问题
+
+`密码长度6-12位，由数字，小写字母和大写字母组成，至少包括两种`
+
+步骤一: 不考虑“至少包括两种”这一条件
+
+> var reg = /^[0-9a-zA-Z]{6,12}$/
+
+步骤二: 判断是否包括某一种字符
+
+假设必须包括数字，我们可以使用`(?=.*[0-9])`来做。
+
+> var reg = /(?=.*[0-9])^[0-9a-zA-Z]{6,12}$/
+
+<span style="color:red">表示开头前面还有个位置(参照空白符)，该位置后面的字符匹配`/.*[0-9]/`,即有任何多个任意字符，后面再跟个数字</span>
+
+步骤三: 判断同时包括多种字符
+
+假设同时包括数字和小写字母，可以用`(?=.*[0-9])(?=.*[a-z])`
+
+> var reg = /(?=.*[0-9])(?=.*[a-z])^[0-9a-zA-Z]{6,12}$/
+
+步骤四: 步骤三中的正则是数字和小写字母同时存在的情况，但题目要求存在两种以上即可，不是三种都有。这种情况下使用管道符`|`
+
+> var reg = /((?=.*[0-9])(?=.*[a-z])|(?=.*[0-9])(?=.*[A-Z])|(?=.*[A-Z])(?=.*[a-z]))^[0-9a-zA-Z]{6,12}$/
+
+
+
+
 #### 4. 用正则取出cookie
 
 ```javascript
